--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-auto-hd-fps",
-  "version": "1.1.20",
+  "version": "1.1.21",
   "homepage": "https://avi12.com",
   "repository": "avi12/youtube-auto-hd",
   "author": {
@@ -32,6 +32,7 @@
     "rollup-plugin-css-only": "^3.0.0",
     "rollup-plugin-svelte": "~7.0.0",
     "rollup-plugin-terser": "^7.0.2",
+    "set-json-version": "^1.0.4",
     "svelte": "~3.30.1",
     "svelte-check": "^1.0.55",
     "svelte-preprocess": "^4.5.1",
