--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-auto-hd-fps",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "homepage": "https://avi12.com",
   "repository": "avi12/youtube-auto-hd",
   "author": {
@@ -22,29 +22,28 @@
     "run-browser": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=dQw4w9WgXcQ --source-dir dist --verbose --target",
     "run-firefox": "pnpm run-browser firefox-desktop",
     "run-chromium": "pnpm run-browser chromium",
-    "run-edge-windows": "\"\"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"\" https://www.youtube.com/watch?v=dQw4w9WgXcQ --load-extension=%cd%\\dist",
-    "run-opera-windows": "\"\"%LocalAppData%\\Programs\\Opera\\launcher.exe\"\" https://www.youtube.com/watch?v=dQw4w9WgXcQ --load-extension=%cd%\\dist"
+    "run-edge-windows": "\"\"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"\" https://www.youtube.com/watch?v=dQw4w9WgXcQ --load-extension=%cd%\\dist"
   },
   "devDependencies": {
-    "@mdi/js": "^5.8.55",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "~11.0.1",
-    "postcss": "^8.2.1",
+    "@mdi/js": "^5.9.55",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "~11.2.0",
+    "postcss": "^8.2.6",
     "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^1.4.2",
-    "rollup": "~2.35.1",
+    "prettier-plugin-svelte": "^2.1.6",
+    "rollup": "~2.39.1",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-svelte": "~7.0.0",
+    "rollup-plugin-svelte": "~7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.30.0",
-    "set-json-version": "^1.0.4",
-    "svelte": "~3.31.0",
-    "svelte-check": "^1.1.23",
-    "svelte-materialify": "^0.3.4",
-    "web-ext": "^5.4.1",
-    "webext-store-incompat-fixer": "^0.1.11",
-    "zip-self": "^0.2.5"
+    "sass": "^1.32.8",
+    "set-json-version": "^1.0.5",
+    "svelte": "~3.32.3",
+    "svelte-check": "^1.1.36",
+    "svelte-materialify": "^0.3.5",
+    "web-ext": "^5.5.0",
+    "webext-store-incompat-fixer": "^0.1.13",
+    "zip-self": "^0.3.1"
   },
   "browserslist": [
     "Firefox ESR",
