--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-auto-hd-fps",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "homepage": "https://avi12.com",
   "repository": "avi12/youtube-auto-hd",
   "author": {
@@ -14,7 +14,7 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "pack": "web-ext build --overwrite-dest --artifacts-dir dist_packed --source-dir dist --filename youtube_auto_hd_fps-{version}.zip",
-    "pack-stores": "webext-store-incompat-fixer -i dist_packed/youtube_auto_hd_fps-{version}.zip --edge-locale-inclusions en,de,de_CH,de_AT,es,es_419,es_US,he,ja,nl,pl,pt_BR,sr --stores edge,firefox",
+    "pack-stores": "webext-store-incompat-fixer -i dist_packed/youtube_auto_hd_fps-{version}.zip --edge-locale-inclusions en,sr,hr,de,de_CH,de_AT,es,es_419,es_US,fr,fr_CA,he,ja,nl,pl,pt_BR,zh_Hans,zh_Hant --stores edge,firefox",
     "pack-self": "zip-self -o dist_packed/youtube_auto_hd_fps-{version}-source.zip",
     "build-pack": "pnpm run build && pnpm run pack && pnpm run pack-stores && pnpm run pack-self",
     "set-version": "set-json-version -f package.json dist/manifest.json -v",
@@ -28,19 +28,19 @@
     "@mdi/js": "^5.9.55",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "~11.2.0",
-    "postcss": "^8.2.6",
+    "postcss": "^8.2.7",
     "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^2.1.6",
-    "rollup": "~2.39.1",
+    "prettier-plugin-svelte": "^2.2.0",
+    "rollup": "~2.40.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-svelte": "~7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.32.8",
     "set-json-version": "^1.0.5",
-    "svelte": "~3.32.3",
-    "svelte-check": "^1.1.36",
-    "svelte-materialify": "^0.3.5",
+    "svelte": "~3.35.0",
+    "svelte-check": "^1.2.3",
+    "svelte-materialify": "^0.3.6",
     "web-ext": "^5.5.0",
     "webext-store-incompat-fixer": "^0.1.13",
     "zip-self": "^0.3.1"
