--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-auto-hd-fps",
-  "version": "1.3.8",
+  "version": "1.3.9",
   "homepage": "https://avi12.com",
   "repository": "avi12/youtube-auto-hd",
   "author": {
@@ -14,7 +14,7 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "pack": "web-ext build --overwrite-dest --artifacts-dir dist_packed --source-dir dist --filename youtube_auto_hd_fps-{version}.zip",
-    "pack-stores": "webext-store-incompat-fixer -i dist_packed/youtube_auto_hd_fps-{version}.zip --edge-locale-inclusions en,sr,hr,de,de_CH,de_AT,es,es_419,es_US,fr,fr_CA,he,ja,nl,pl,pt_BR,zh_Hans,zh_Hant --stores edge,firefox",
+    "pack-stores": "webext-store-incompat-fixer -i dist_packed/youtube_auto_hd_fps-{version}.zip --edge-locale-inclusions en,sr,hr,de,de_CH,de_AT,es,es_419,es_US,fr,fr_CA,he,ja,nl,pl,pt_BR,ru,zh_Hans,zh_Hant --stores edge,firefox",
     "pack-self": "zip-self -o dist_packed/youtube_auto_hd_fps-{version}-source.zip",
     "build-pack": "pnpm run build && pnpm run pack && pnpm run pack-stores && pnpm run pack-self",
     "deploy": "web-ext-deploy --env --verbose",
