--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-auto-hd-fps",
-  "version": "1.3.15.2",
+  "version": "1.3.16",
   "homepage": "https://avi12.com",
   "repository": "avi12/youtube-auto-hd",
   "author": {
@@ -30,6 +30,7 @@
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "~11.2.1",
     "@sveltejs/eslint-config": "github:sveltejs/eslint-config",
+    "@types/chrome": "^0.0.148",
     "eslint-plugin-svelte3": "^3.2.0",
     "postcss": "^8.2.9",
     "prettier": "^2.2.1",
