--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.32.8",
     "set-json-version": "^1.0.5",
+    "stylelint": "^13.13.1",
+    "stylelint-config-ccb": "^1.5.27",
     "svelte": "~3.37.0",
     "svelte-check": "^1.3.0",
     "svelte-materialify": "^0.3.6",
@@ -67,5 +69,8 @@
     "singleQuote": false,
     "trailingComma": "none",
     "svelteSortOrder": "scripts-markup-styles"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-ccb"
   }
 }
