--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "~11.2.1",
     "@sveltejs/eslint-config": "github:sveltejs/eslint-config",
-    "@types/chrome": "^0.0.148",
+    "@types/chrome": "^0.0.170",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "postcss": "^8.2.9",
-    "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "rollup": "~2.44.0",
     "rollup-plugin-css-only": "^3.1.0",
@@ -65,12 +66,6 @@
     "unreleased Edge versions",
     "unreleased Safari versions"
   ],
-  "prettier": {
-    "arrowParens": "avoid",
-    "singleQuote": false,
-    "trailingComma": "none",
-    "svelteSortOrder": "scripts-markup-styles"
-  },
   "stylelint": {
     "extends": "stylelint-config-ccb"
   }
