--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pack-stores": "webext-store-incompat-fixer -i dist_packed/youtube_auto_hd_fps-{version}.zip --edge-locale-inclusions en,sr,hr,de,de_CH,de_AT,es,es_419,es_US,fr,fr_CA,he,ja,nl,pl,pt_BR,ru,zh_Hans,zh_Hant --stores edge,firefox",
     "pack-self": "zip-self -o dist_packed/youtube_auto_hd_fps-{version}-source.zip",
     "build-pack": "pnpm run build && pnpm run pack && pnpm run pack-stores && pnpm run pack-self",
-    "deploy": "web-ext-deploy --env --verbose",
+    "build-for-firefox": "build-for-browser --i dist_packed/youtube-speed-control-{version}.zip --browser=firefox",
+    "build-for-opera": "build-for-browser --i dist_packed/youtube-speed-control-{version}.zip --browser=opera",
     "set-version": "set-json-version -f package.json dist/manifest.json -v",
     "validate": "svelte-check",
     "run-browser": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=dQw4w9WgXcQ --source-dir dist --verbose --target",
@@ -31,9 +32,10 @@
     "@rollup/plugin-node-resolve": "~11.2.1",
     "@sveltejs/eslint-config": "github:sveltejs/eslint-config",
     "@types/chrome": "^0.0.148",
+    "build-for-browser": "github:avi12/build-for-browser",
+    "eslint": "^8.4.1",
     "eslint-plugin-svelte3": "^3.2.0",
     "postcss": "^8.2.9",
-    "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "rollup": "~2.44.0",
     "rollup-plugin-css-only": "^3.1.0",
