--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,8 @@
   "arrowParens": "avoid",
   "singleQuote": false,
   "trailingComma": "none",
+  "semi": true,
   "svelteSortOrder": "scripts-markup-styles",
+  "plugins": ["prettier-plugin-svelte"],
   "printWidth": 100
 }
