--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "pack-stores": "webext-store-incompat-fixer -i dist_packed/youtube_auto_hd_fps-{version}.zip --edge-locale-inclusions en,sr,hr,de,de_CH,de_AT,es,es_419,es_US,fr,fr_CA,he,ja,nl,pl,pt_BR,ru,zh_Hans,zh_Hant --stores chrome,edge,firefox,opera",
     "pack-self": "zip-self -o dist_packed/youtube_auto_hd_fps-{version}-source.zip",
     "build-pack": "pnpm run build && pnpm run pack && pnpm run pack-stores && pnpm run pack-self",
-    "build-for-firefox": "build-for-browser --i dist_packed/youtube_auto_hd_fps-{version}.zip --browser=firefox",
-    "build-for-opera": "build-for-browser --i dist_packed/youtube_auto_hd_fps-{version}.zip --browser=opera",
+    "build-for-firefox": "build-for-browser --i dist_packed/youtube_auto_hd_fps-{version}.zip --browser=firefox --source",
+    "build-for-opera": "build-for-browser --i dist_packed/youtube_auto_hd_fps-{version}.zip --browser=opera --source",
     "set-version": "set-json-version -f package.json dist/manifest.json -v",
     "validate": "svelte-check",
     "run-browser": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=dQw4w9WgXcQ --source-dir dist --verbose --target",
@@ -26,36 +26,36 @@
   "devDependencies": {
     "@mdi/js": "^6.5.95",
     "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "~13.1.2",
+    "@rollup/plugin-node-resolve": "~13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "@sveltejs/eslint-config": "github:sveltejs/eslint-config",
     "@tsconfig/svelte": "^3.0.0",
     "@types/chrome": "^0.0.174",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "build-for-browser": "github:avi12/build-for-browser",
     "eslint": "^8.6.0",
-    "eslint-plugin-svelte3": "^3.2.1",
+    "eslint-plugin-svelte3": "^3.3.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.1",
-    "rollup": "~2.62.0",
+    "rollup": "~2.63.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "~7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.45.2",
+    "sass": "^1.46.0",
     "set-json-version": "^1.0.7",
     "stylelint": "^14.2.0",
     "stylelint-config-ccb": "^1.6.5",
-    "svelte": "~3.44.3",
+    "svelte": "~3.45.0",
     "svelte-check": "^2.2.11",
     "svelte-materialify": "^0.3.11",
     "svelte-preprocess": "^4.10.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "web-ext": "^6.6.0",
-    "webext-store-incompat-fixer": "^0.1.39",
+    "webext-store-incompat-fixer": "^0.1.40",
     "zip-self": "^0.4.5"
   }
 }
