--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "pack": "web-ext build --overwrite-dest --artifacts-dir dist_packed --source-dir dist --filename youtube_auto_hd_fps-{version}.zip",
-    "pack-stores": "webext-store-incompat-fixer -i dist_packed/youtube_auto_hd_fps-{version}.zip --edge-locale-inclusions en,sr,hr,de,de_CH,de_AT,es,es_419,es_US,fr,fr_CA,he,ja,nl,pl,pt_BR,ru,zh_Hans,zh_Hant --stores chrome,edge,firefox,opera",
+    "pack-stores": "webext-store-incompat-fixer -i dist_packed/youtube_auto_hd_fps-{version}.zip --edge-locale-inclusions de,de_CH,de_AT,fr,fr_CA,he,hu,it,ja,id,nl,pl,pt_BR,ru,zh_Hans,zh_Hant --stores chrome,edge,firefox,opera",
     "pack-self": "zip-self -o dist_packed/youtube_auto_hd_fps-{version}-source.zip",
     "build-pack": "pnpm run build && pnpm run pack && pnpm run pack-stores && pnpm run pack-self",
     "build-for-firefox": "build-for-browser --i dist_packed/youtube_auto_hd_fps-{version}.zip --browser=firefox --source",
@@ -29,7 +29,7 @@
     "@rollup/plugin-typescript": "^8.3.0",
     "@sveltejs/eslint-config": "github:sveltejs/eslint-config",
     "@tsconfig/svelte": "^3.0.0",
-    "@types/chrome": "^0.0.174",
+    "@types/chrome": "^0.0.175",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "build-for-browser": "github:avi12/build-for-browser",
@@ -43,7 +43,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "~7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.46.0",
+    "sass": "^1.47.0",
     "set-json-version": "^1.0.7",
     "stylelint": "^14.2.0",
     "stylelint-config-ccb": "^1.6.5",
