--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "run-edge-windows": "\"\"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"\" https://www.youtube.com/watch?v=dQw4w9WgXcQ --load-extension=%cd%\\dist"
   },
   "devDependencies": {
-    "@mdi/js": "^6.7.96",
-    "@rollup/plugin-commonjs": "^22.0.0",
+    "@mdi/js": "^6.9.96",
+    "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "~13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
     "@sveltejs/eslint-config": "github:sveltejs/eslint-config",
     "@tsconfig/svelte": "^3.0.0",
-    "@types/chrome": "^0.0.190",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
+    "@types/chrome": "^0.0.191",
+    "@typescript-eslint/eslint-plugin": "^5.30.4",
+    "@typescript-eslint/parser": "^5.30.4",
     "build-for-browser": "github:avi12/build-for-browser",
-    "eslint": "^8.18.0",
+    "eslint": "^8.19.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
@@ -43,18 +43,18 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "~7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.52.3",
-    "set-json-version": "^1.0.7",
+    "sass": "^1.53.0",
+    "set-json-version": "^2.1.0",
     "stylelint": "^14.9.1",
-    "stylelint-config-ccb": "^1.15.0",
+    "stylelint-config-ccb": "^1.27.1",
     "svelte": "~3.48.0",
-    "svelte-check": "^2.7.2",
+    "svelte-check": "^2.8.0",
     "svelte-materialify": "^0.3.11",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "web-ext": "^7.0.0",
-    "webext-store-incompat-fixer": "^0.1.41",
-    "zip-self": "^0.4.7"
+    "web-ext": "^7.1.0",
+    "webext-store-incompat-fixer": "0.1.42",
+    "zip-self": "^0.5.2"
   }
 }
