--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -7,15 +7,15 @@ body:
     id: bug-description
     attributes:
       label: Describe the bug
-      description: A clear and concise description of what the bug is
-      placeholder: E.g. "the quality won't change"
-      validation:
-        required: true
+      description: "A clear and concise description of what the bug is"
+      placeholder: "E.g. the quality won't change"
+    validation:
+      required: true
   - type: textarea
     id: reproduction
     attributes:
       label: How to reproduce
-      placeholder: E.g. go to a /watch page and then click on another video
+      placeholder: "E.g. go to a /watch page and then click on another video"
       validation:
         required: true
   - type: textarea
@@ -24,7 +24,7 @@ body:
       required: true
     attributes:
       label: Expected bahavior
-      placeholder: E.g. the quality should change to 1080p at 60FPS but is instead 720p
+      placeholder: "E.g. the quality should change to 1080p at 60FPS but is instead 720p"
   - type: dropdown
     id: browsers
     attributes: What browser(s) can you reproduce the issue on?
@@ -53,6 +53,6 @@ body:
     id: version
     attributes:
       label: What's the version you're running?
-      description: Go to the extensions page and copy the version number
+      description: "Go to the extensions page and copy the version number"
       validation:
         required: true
