--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -47,6 +47,8 @@ body:
       - macOS
       - Linux
       - Android
+    validations:
+      required: true
   - type: input
     id: version
     attributes:
