--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -12,7 +12,7 @@ body:
       options:
         - "Extension's functionality"
         - "Pop-up settings page"
-    validators:
+    validations:
       required: true
   - type: textarea
     attributs:
