--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: Feature request
-about: Suggest a new idea for the extension
+description: Suggest a new idea for the extension
 title: '[Feature request] '
 labels: enhancement
 body:
