--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
 name: Bug report
 description: File a bug report
 title: "[Bug] "
-labels: bug
+labels: [bug]
 body:
   - type: textarea
     id: bug-description
@@ -21,7 +21,7 @@ body:
   - type: textarea
     id: expected-behavior
     attributes:
-      label: Expected bahavior
+      label: Expected behavior
       placeholder: E.g. the quality should change to 1080p at 60FPS but is instead 720p
     validations:
       required: true
