--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-auto-hd-fps",
-  "version": "1.6.6",
+  "version": "1.6.7",
   "homepage": "https://avi12.com",
   "repository": "https://github.com/avi12/youtube-auto-hd",
   "author": "avi12 <avi6106@gmail.com>",
@@ -17,42 +17,44 @@
     "build-for-firefox": "build-for-browser --i dist_packed/youtube_auto_hd_fps-{version}.zip --browser=firefox --source",
     "set-version": "set-json-version -f package.json dist/manifest.json -v",
     "validate": "svelte-check",
-    "run-browser": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=1E_kBSka_ec --source-dir dist --verbose --target",
+    "run-browser": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=LKLuvoY6U0I --source-dir dist --verbose --target",
     "run-chromium": "pnpm run-browser chromium",
     "run-edge-windows": "\"\"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"\" https://www.youtube.com/watch?v=dQw4w9WgXcQ --load-extension=%cd%\\dist"
   },
   "devDependencies": {
-    "@mdi/js": "^6.9.96",
-    "@rollup/plugin-commonjs": "^22.0.1",
+    "@mdi/js": "^7.0.96",
+    "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "~13.3.0",
-    "@rollup/plugin-typescript": "^8.3.3",
+    "@rollup/plugin-typescript": "^8.3.4",
     "@sveltejs/eslint-config": "github:sveltejs/eslint-config",
     "@tsconfig/svelte": "^3.0.0",
-    "@types/chrome": "^0.0.191",
-    "@typescript-eslint/eslint-plugin": "^5.30.4",
-    "@typescript-eslint/parser": "^5.30.4",
+    "@types/chrome": "^0.0.193",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "build-for-browser": "github:avi12/build-for-browser",
-    "eslint": "^8.19.0",
+    "dotenv": "^16.0.1",
+    "eslint": "^8.22.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "rollup": "~2.75.7",
+    "rollup": "~2.78.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "~7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.53.0",
+    "sass": "^1.54.4",
     "set-json-version": "^2.1.0",
-    "stylelint": "^14.9.1",
-    "stylelint-config-ccb": "^1.27.1",
-    "svelte": "~3.48.0",
+    "stylelint": "^14.10.0",
+    "stylelint-config-ccb": "^1.31.1",
+    "svelte": "~3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-materialify": "^0.3.11",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "web-ext": "^7.1.0",
+    "web-ext": "^7.2.0",
     "webext-store-incompat-fixer": "0.3.1",
     "zip-self": "^0.5.2"
   }
