ESLint: Removed rules; instead extending from `eslint-config-avi12`

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,43 +4,13 @@
     "ecmaVersion": 2021,
     "sourceType": "module"
   },
-  "rules": {
-    "arrow-parens": ["warn", "as-needed"],
-    "prefer-const": "warn",
-    "no-async-promise-executor": "off",
-    "semi": "warn",
-    "quotes": [
-      "warn",
-      "double",
-      {
-        "allowTemplateLiterals": true
-      }
-    ],
-    "indent": [
-      "warn",
-      2,
-      {
-        "SwitchCase": 1
-      }
-    ],
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": ["warn"],
-    "@typescript-eslint/no-explicit-any": "off"
-  },
-  "overrides": [
-    {
-      "files": ["*.svelte"],
-      "processor": "svelte3/svelte3"
-    }
-  ],
   "env": {
     "es6": true,
     "browser": true,
     "node": true,
     "webextensions": true
   },
-  "plugins": ["svelte3", "@typescript-eslint"],
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "avi12"],
   "settings": {
     "svelte3/typescript": true
   }
