--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.0.1",
     "eslint": "^8.22.0",
     "eslint-config-avi12": "github:avi12/eslint-config-avi12",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
