--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "run-browser": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --source-dir build/chrome-mv3-dev --verbose --target",
     "run-chromium": "pnpm run-browser chromium",
     "run-chromium:rtl": "pnpm run-browser chromium --args=\"--lang=he\"",
-    "run-firefox": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --source-dir build/firefox-mv3-dev --verbose --target firefox-desktop",
+    "run-firefox": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --source-dir build/firefox-mv3-prod --verbose --target firefox-desktop",
     "run-edge-windows": "pnpm run-browser chromium --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"",
     "run-chromium:screenshot": "web-ext run --no-config-discovery --start-url about:blank --source-dir build/chrome-mv3-prod --verbose --target chromium"
   },
