Improved script & documentation for running on mobile/tablet

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "package-test": "plasmo package",
     "package": "web-ext build --source-dir build/chrome-mv3-prod --overwrite-dest --artifacts-dir dist_pack --filename youtube-auto-hd-fps-{version}.zip",
     "package:firefox": "web-ext build --source-dir build/firefox-mv3-prod --overwrite-dest --artifacts-dir dist_pack --filename youtube-auto-hd-fps-{version}_adapted_for_firefox.zip",
-    "build-pack": "pnpm build && pnpm package-test",
+    "build-pack": "pnpm build && pnpm package",
+    "build-pack:test": "pnpm build && pnpm package-test",
     "build-pack:firefox": "pnpm build:firefox && pnpm package",
     "build-pack:all": "pnpm build-pack && pnpm build-pack:firefox",
     "run-browser": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --source-dir build/chrome-mv3-dev --verbose --target",
