--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "run-chromium": "pnpm run-browser chromium",
     "run-chromium:rtl": "pnpm run-browser chromium --args=\"--lang=he\"",
     "run-firefox": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --source-dir build/firefox-mv3-prod --verbose --target firefox-desktop",
-    "run-edge-windows": "pnpm run-browser chromium --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"",
+    "run-edge:windows": "pnpm run-browser chromium --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"",
+    "run-opera:windows": "pnpm run-browser chromium --chromium-binary \"%LocalAppData%\\Programs\\Opera\\opera.exe\"",
     "run-chromium:screenshot": "web-ext run --no-config-discovery --start-url about:blank --source-dir build/chrome-mv3-prod --verbose --target chromium"
   },
   "dependencies": {
