--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "run-edge:windows": "pnpm run-browser chromium --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"",
     "run-opera:windows": "pnpm run-browser chromium --chromium-binary \"%LocalAppData%\\Programs\\Opera\\opera.exe\"",
     "run-chromium:screenshot": "web-ext run --no-config-discovery --start-url about:blank --source-dir build/chrome-mv3-prod --verbose --target chromium",
-    "run-firefox:screenshot": "web-ext run --no-config-discovery --start-url about:blank --source-dir build/firefox-mv3-prod --verbose --target firefox-desktop"
+    "run-firefox:screenshot": "web-ext run --no-config-discovery --start-url about:blank --source-dir build/firefox-mv3-prod --verbose --target firefox-desktop",
+    "run-edge:windows-embed": "web-ext run --no-config-discovery --start-url file:///%cd%/tests/local-embed.html --source-dir build/chrome-mv3-dev --verbose --target chromium --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\""
   },
   "dependencies": {
     "@mdi/js": "^7.1.96",
