package.json: Updated `name`

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "youtube-auto-hd-plasmo",
+  "name": "youtube-auto-hd",
   "displayName": "YouTube Auto HD + FPS",
   "version": "1.7.0",
   "description": "Automatically set the video quality on YouTube according to its FPS!",
