--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "build:firefox": "plasmo build --target=firefox-mv3",
     "package-test": "plasmo package",
     "package": "web-ext build --source-dir build/chrome-mv3-prod --overwrite-dest --artifacts-dir dist-pack --filename youtube-auto-hd-fps-{version}.zip",
+    "package:self": "zip-self -o dist-packed/youtube-auto-hd-fps-{version}-source.zip",
     "package:firefox": "web-ext build --source-dir build/firefox-mv3-prod --overwrite-dest --artifacts-dir dist-pack --filename youtube-auto-hd-fps-{version}_adapted_for_firefox.zip",
     "build-pack": "pnpm build && pnpm package",
     "build-pack:test": "pnpm build && pnpm package-test",
-    "build-pack:firefox": "pnpm build:firefox && pnpm package:firefox",
+    "build-pack:firefox": "pnpm build:firefox && pnpm package:firefox && pnpm package:self",
     "build-pack:all": "pnpm build-pack && pnpm build-pack:firefox",
     "run-browser": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --source-dir build/chrome-mv3-dev --verbose --target",
     "run-chromium": "pnpm run-browser chromium",
