package.json: - Incremented version to 1.7.5 - Added homepage

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "youtube-auto-hd",
   "displayName": "YouTube Auto HD + FPS",
-  "version": "1.7.4",
+  "version": "1.7.5",
   "description": "Automatically set the video quality on YouTube according to its FPS!",
   "author": "avi12 <avi6106@gmail.com>",
+  "homepage": "https://github.com/avi12/youtube-auto-hd",
   "scripts": {
     "dev": "plasmo dev --verbose",
     "dev:firefox": "plasmo dev --verbose --target=firefox-mv2",
