--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -61,9 +61,9 @@ body:
   - type: checkboxes
     id: reported
     attributes:
-      label: Make sure the bug wasn't [reported](https://github.com/avi12/youtube-auto-hd/issues?q=is%3Aissue) before
+      label: Make sure the bug wasn't reported before
       options:
-        - label: I'm the first one to report it
+        - label: I'm the first one to [report](https://github.com/avi12/youtube-auto-hd/issues?q=is%3Aissue) it
           required: true
   - type: textarea
     id: additional-context
