--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@plasmohq/prettier-plugin-sort-imports": "3.6.3",
     "@sveltejs/eslint-config": "github:sveltejs/eslint-config",
-    "@types/chrome": "0.0.224",
+    "@types/chrome": "0.0.233",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "autoprefixer": "^10.4.14",
@@ -52,9 +52,10 @@
     "postcss": "^8.4.21",
     "prettier": "2.8.4",
     "prettier-plugin-svelte": "^2.9.0",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.1",
+    "tailwindcss-rtl": "^0.9.0",
     "typescript": "5.0.2",
-    "web-ext": "^7.6.0",
+    "web-ext": "^7.6.1",
     "webext-store-incompat-fixer": "^0.3.3",
     "zip-self": "^0.5.6"
   },
